testsuite/tests/patsyn/should_fail/export-syntax.hs
module Foo(A(.., B)) where

data A = A | B
